# xup_vitis_network_example

./: .gitignore  Makefile  synth.sh
Latency_kernels/: Makefile
Latency_kernels/src/: constants.h  dump.cpp  issue.cpp
basic_tests/: CMakeLists.txt  basic_test.cpp  latency_test.cpp  run.sh  run_eth.sh  run_scale.sh  scale_test.cpp
config_files/: connectivity_basic_if0.ini  connectivity_basic_if3.ini  connectivity_latency_if3.ini
runs/2023-04-17-latency-xrt2.14/: run.sh  run_direct.sh
xrt_host_api/: CMakeLists.txt
xrt_host_api/examples/ping_fpga/: ping_fpga.cpp
xrt_host_api/include/vnx/: cmac.hpp
xrt_host_api/src/: cmac.cpp
